--- a/project_main/css/canlendar.css
+++ b/project_main/css/canlendar.css
@@ -14,14 +14,30 @@ header{
 .headerbox{
   background-color: orange;
   height:120px;
+  /* margin:0 auto; */
+ /* text-align: center; */
   
+  
+}
+.headertext
+{
+  width:1080px;
+  /* width: 100%; */
+
+  font-weight: bold;
+  font-size: 85px;
+  color: #fff;
+  padding-left: 500px;
+  /* padding-right: 0 auto; */
+  margin: 0 auto;
+  /* text-align: center; */
   
 }
 
 .login_item{
   position: absolute;
   top: 20px; 
-  right: 5%;
+  right: 1%;
   
   padding-right: 0.05px;
 }
@@ -48,7 +64,7 @@ header{
   text-decoration: none;
   color: #000;
 }
-.headertext
+/* .headertext
 {
   width:1080px;
 
@@ -57,9 +73,9 @@ header{
   color: #fff;
   padding-left: 500px;
   /* padding-right: 0 auto; */
-  margin: 0 auto;
+  /* margin: 0 auto;
   
-}
+} */ 
 
 .wrap{
   max-width:2000px;
@@ -139,6 +155,119 @@ address{
   font-style: normal;
 }
 
+
+/* 캘린더 부분 */
+/* * {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  box-sizing: border-box;
+} */
+  
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  
+}
+
+.calendar {
+    width: 600px;
+    /* margin-top: 50px; */
+    margin: 0 auto;
+}
+
+.header {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.year-month {
+    font-size: 30px;
+}
+
+.nav {
+    display: flex;
+    border: 1px solid #333333;
+    border-radius: 5px;
+}
+
+.nav-btn {
+    width: 28px;
+    height: 30px;
+    border: none;
+    font-size: 16px;
+    line-height: 34px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.go-today {
+    width: 75px;
+    border-left: 1px solid #333333;
+    border-right: 1px solid #333333;
+}
+
+.days {
+  display: flex;
+  margin: 25px 0 10px;
+}
+
+.day {
+  width: calc(100% / 7);
+  text-align: center;
+}
+
+.dates {
+  display: flex;
+  flex-flow: row wrap;
+  height: 500px;
+  border-top: 1px solid #333333;
+  border-right: 1px solid #333333;
+}
+
+.date {
+  width: calc(100% / 7);
+  padding: 8px;
+  text-align: right;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #333333;
+}
+
+.day:nth-child(7n + 1),
+.date:nth-child(7n + 1) {
+color: #D13E3E;
+}
+
+.day:nth-child(7n),
+.date:nth-child(7n) {
+color: #396EE2;
+}
+
+.other {
+  opacity: .3;
+}
+
+.today {
+  position: relative;
+  color: #FFFFFF;
+}
+
+.today::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: -1;
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-color: burlywood;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  content: '';
+}
 
 
 
