--- a/project_main/css/community.css
+++ b/project_main/css/community.css
@@ -185,13 +185,13 @@ html,body, section{
     float: left;
     /* height: 300px%; */
     width: 90%;
-    background-color: blue;
-    height: 300px;
+    background-color: peachpuff;
+    height: 100vh;
     
 }
 .contents:after{
     width: 5px;
-    background-color: #000;
+    background-color: orange;
     content: '';
 }
 
@@ -199,10 +199,84 @@ html,body, section{
    
     float: left;
     width: 10%;
-    background-color: yellow;
-    height: 300px;
-    border-right: 5px solid #000;
+    background-color: gold;
+    /* height: 100%; */
+    height: 100vh;
+    border-right: 5px dotted orange;
     box-sizing: border-box;
 
 
+}
+
+table{
+  border:1px solid gray;
+    
+  margin:0 auto;
+  text-align: center;
+  width: 100%;
+  font-size: 20px;
+}
+
+td{
+    border-top: 1px solid lightgray;
+}
+.menu_wrap{
+    max-width:2000px;
+    margin:200px;
+    margin:0 auto;
+    background-color: lightgray;
+    display: block;
+  
+  }
+  .com_menu{
+    display: table;
+    table-layout:fixed;
+    /* width:100%; */
+    list-style:none;
+    width:1080px;
+  
+  }
+  
+  .menu_item{
+    display: table-cell;
+    list-style:none;
+   
+  }
+
+
+.button{
+  margin-left: 1000px;
+}
+/* .community_button{
+  margin: 0px;
+} */
+#total{
+  margin-left: 4px;
+  font-size: 20px;
+  width:25%;
+  margin-right: -4px;
+  /* padding: 0px; */
+}
+#chat{
+  width:25%;
+  font-size: 20px;
+  margin: -4px;
+  /* padding: 0px; */
+ 
+}
+#info{
+  width: 25%;
+  margin: -4px;
+  /* padding: 0px; */
+  font-size: 20px;
+}
+#others{
+  width: 25%;
+  margin: -4px;
+  /* padding: 0px; */
+  font-size: 20px;
+}
+
+.search{
+  margin-left: 900px;
 }
