--- a/project_main/css/my_community.css
+++ b/project_main/css/my_community.css
@@ -14,6 +14,8 @@ header{
 .headerbox{
   background-color: orange;
   height:120px;
+  text-align: center;
+  margin: 0 auto;
   
   
 }
@@ -21,9 +23,9 @@ header{
 .login_item{
   position: absolute;
   top: 20px; 
-  right: 3%;
+  right: 1%;
   
-  /* padding-right: 0.05px; */
+  padding-right: 0.05px;
 }
 .login{
   list-style:none;
