--- a/project_main/css/main.css
+++ b/project_main/css/main.css
@@ -21,7 +21,7 @@ header{
 .login_item{
   position: absolute;
   top: 20px; 
-  right: 5%;
+  right: 1%;
   
   padding-right: 0.05px;
 }
@@ -48,16 +48,18 @@ header{
   text-decoration: none;
   color: #000;
 }
+
+
+
 .headertext
 {
   width:1080px;
 
   font-weight: bold;
-  font-size: 100px;
+  font-size: 85px;
   color: #fff;
-  padding-left: 500px;
-  /* padding-right: 0 auto; */
   margin: 0 auto;
+  text-align: center;
   
 }
 
