--- a/project_main/css/notice_content.css
+++ b/project_main/css/notice_content.css
@@ -249,8 +249,9 @@ h2{
     
   margin:0 auto;
   text-align: center;
-  width: 100%;
+  width: 80%;
   font-size: 20px;
+  height: 100vh;
 
 }
 /* table{
