--- a/project_main/css/calendar_write.css
+++ b/project_main/css/calendar_write.css
@@ -56,11 +56,10 @@ header{
   width:1080px;
 
   font-weight: bold;
-  font-size: 100px;
+  font-size: 85px;
   color: #fff;
-  padding-left: 500px;
-  /* padding-right: 0 auto; */
   margin: 0 auto;
+  text-align: center;
   
 }
 
