--- a/project_main/css/personal_information.css
+++ b/project_main/css/personal_information.css
@@ -1,8 +1,12 @@
 
 @charset "UTF-8";
+
+/* header */
 header{
   font-family: "나눔고딕", NanumGothic,Dotum,"돋음",sans-serif;
 }
+
+
 .headerbox,.menu,.menu_item{
   margin:0;
   padding:0;
@@ -12,19 +16,31 @@ header{
   color: inherit;
   text-decoration: none;
 }
+
+/* reco를 감싸고 있는 오렌지색 박스 부분 */
 .headerbox{
   background-color: orange;
   height:120px;
-  text-align: center;
+  /* text-align: center;
   margin: 0 auto;
-  
+   */
   
 }
+/* reco 있는 부분  */
+.headertext
+{
+  width:1080px;
 
-
+  font-weight: bold;
+  font-size: 85px;
+  color: #fff;
+  margin: 0 auto;
+  text-align: center;
+  
+}
 .login_item{
   position: absolute;
-  top: 20px; 
+  top: 0.03px; 
   right: 1%;
   
   padding-right: 0.05px;
@@ -51,19 +67,6 @@ header{
 .link{
   text-decoration: none;
   color: #000;
-}
-.headertext
-{
-  width:1080px;
-
-  font-weight: bold;
-  font-size: 80px;
-  color: #fff;
-  /* padding-left: 500px; */
-  padding-left: 0 auto;
-  margin: 0 auto;
-  /* text-align: center; */
-  
 }
 
 .wrap{
@@ -135,6 +138,45 @@ input{
 }
 
 
+input{
+  background-color: lightgray;
+}
+
+fieldset{
+  border-color: orange;
+  border-width: 10px;
+  margin-top: 40px;
+
+}
+table {
+  margin: 0px auto;
+  font-size: 20px;
+}
+
+/* 취소, 확인버튼 묶음  */
+div 
+
+{
+  margin-top: 30px;
+  
+  text-align: center;
+
+}
+/* 취소, 확인 버튼  */
+.button .button_cancel{
+  font-size: 15px;
+}
+/* 회원탈퇴 버튼 */
+#membership{
+  margin:0 auto;
+  display: block;
+  font-size: 30px;
+  
+}
+/* h1{
+  text-align: center;
+} */
+
 footer{
   position: relative;
   width:100%;
@@ -148,41 +190,3 @@ address{
 }
 
 
-input{
-    background-color: lightgray;
-}
-
-fieldset{
-    border-color: orange;
-    border-width: 10px;
-    margin-top: 40px;
-
-}
-table {
-    margin: 0px auto;
-    font-size: 20px;
-}
-
-/* 취소, 확인버튼 묶음  */
-div 
-
-{
-    margin-top: 30px;
-    
-    text-align: center;
-
-}
-/* 취소, 확인 버튼  */
-.button .button_cancel{
-    font-size: 15px;
-}
-/* 회원탈퇴 버튼 */
-#membership{
-    margin:0 auto;
-    display: block;
-    font-size: 30px;
-    
-}
-/* h1{
-    text-align: center;
-} */
