--- a/project_main/css/faq.css
+++ b/project_main/css/faq.css
@@ -330,18 +330,56 @@ td{
 }
 
 h1{
-  text-align: center;
+  margin-left: 180px;
+  font-size: 40px;
 }
 
 /* 자주묻는 질문 컨텐츠 부분  */
-.accordion {position:absolute;top:10%;left:50%;transform:translateX(-50%);width:1000px;}
-input[id*="answer"] {display:none;}
-input[id*="answer"] + label {display:block;padding:20px;border:1px solid #232188;border-bottom:0;color:#fff;font-weight:900;background:#3634a5;cursor:pointer;position:relative;}
-input[id*="answer"] + label em {position:absolute;top:50%;right:10px;width:30px;height:30px;margin-top:-15px;display:inline-block;background:url('./img/arrow.png') 0 0 no-repeat;}
-input[id*="answer"] + label + div {max-height:0;transition: all .35s;overflow:hidden;background:#ebf8ff;font-size:11px;}
-input[id*="answer"] + label + div p {display:inline-block;padding:20px;}
-input[id*="answer"]:checked + label + div {max-height:100px;}
-input[id*="answer"]:checked + label em {background-position:0 -30px;}
+.accordion {
+  position:absolute;
+  top:20%;left:60%;
+  
+  transform:translateX(-60%);
+  width:1000px;
+}
+
+input[id*="answer"] {
+  display:none;
+}
+input[id*="answer"] + label {
+  display:block;
+  padding:20px;
+  border:1px solid #232188;border-bottom:0;
+  color:#fff;
+  font-weight:900;
+  background:#3634a5;
+  cursor:pointer;position:relative;
+}
+input[id*="answer"] + label em {
+  position:absolute;
+  top:10%;right:70px;
+  width:30px;
+  height:30px;
+  margin-top:100px;
+  display:inline-block;
+  background:url('./image/arrow.png') 0 0 no-repeat;
+}
+input[id*="answer"] + label + div {
+  max-height:0;transition: all .35s;
+  overflow:hidden;
+  background:#ebf8ff;
+  font-size:11px;
+}
+input[id*="answer"] + label + div p {
+  display:inline-block;
+  padding:20px;
+}
+input[id*="answer"]:checked + label + div {
+  max-height:100px;
+}
+input[id*="answer"]:checked + label em {
+  background-position:0 -30px;
+}
 
 
 
