--- a/project_main/css/faq.css
+++ b/project_main/css/faq.css
@@ -161,34 +161,39 @@ header{
 
 } */
 .contents{
-    margin:0; padding:0;
-    float: left;
-    /* height: 300px%; */
-    width: 89%;
-    background-color: #fff;
-    height: 100vh;
-
-    
+  float: left;
+  /* height: 300px%; */
+  width: 89%;
+  background-color: #fff;
+  border-left: 5px dotted orange;
+  height: 100vh;
+  box-sizing: border-box;
+  
+  
 }
 .contents:after{
-    width: 10px;
-    background-color: orange;
-    content: '';
+  width: 10px;
+  background-color: orange;
+  content: '';
 }
 
 .aside{
-   
-    float: left;
-    width: 11%;
-    background-color: cornsilk;
-    /* height: 100%; */
-    height: 100vh;
-    border-right: 5px dotted orange;
-    box-sizing: border-box;
-    
+ 
+  float: left;
+  width: 11%;
+  background-color: cornsilk;
+  /* height: 100%; */
+  height: 100vh;
+  
+ 
+  
 
 
 }
+    
+
+
+
 
 h2{
   text-align: center;
