--- a/project_main/css/notice_content.css
+++ b/project_main/css/notice_content.css
@@ -138,7 +138,7 @@ header{
   margin: -100 auto;
   min-height: 100%;
   padding: 50px 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   position: relative;
      
      
@@ -154,36 +154,39 @@ header{
     bottom: 100px;
     right: 100px;
 }
-/* .wrap_div:after{
+.wrap_div:after{
     display: block;
     clear: both;
     content: "";
 
-} */
+}
 .contents{
-    float: left;
-    /* height: 300px%; */
-    width: 89%;
-    background-color: #fff;
-    height: 100vh;
-    
+  float: left;
+  /* height: 300px%; */
+  width: 89%;
+  background-color: #fff;
+  border-left: 5px dotted orange;
+  height: 140vh;
+  box-sizing: border-box;
+  
+  
 }
 .contents:after{
-    width: 10px;
-    background-color: orange;
-    content: '';
+  width: 10px;
+  background-color: orange;
+  content: '';
 }
 
 .aside{
-   
-    float: left;
-    width: 11%;
-    background-color: cornsilk;
-    /* height: 100%; */
-    height: 100vh;
-    border-right: 5px dotted orange;
-    box-sizing: border-box;
-    
+ 
+  float: left;
+  width: 11%;
+  background-color: cornsilk;
+  /* height: 100%; */
+  height: 140vh;
+  
+ 
+  
 
 
 }
@@ -246,7 +249,7 @@ h2{
     
   margin:0 auto;
   text-align: center;
-  width: 80%;
+  width: 90%;
   font-size: 20px;
   height: 90vh;
 
