--- a/project_main/css/notice_write.css
+++ b/project_main/css/notice_write.css
@@ -138,7 +138,7 @@ header{
   margin: -100 auto;
   min-height: 100%;
   padding: 50px 0;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
   position: relative;
      
      
@@ -154,19 +154,19 @@ header{
     bottom: 100px;
     right: 100px;
 }
-/* .wrap_div:after{
+.wrap_div:after{
     display: block;
     clear: both;
     content: "";
 
-} */
+}
 .contents{
   float: left;
   /* height: 300px%; */
   width: 89%;
   background-color: #fff;
   border-left: 5px dotted orange;
-  height: 100vh;
+  height: 120vh;
   box-sizing: border-box;
   
   
@@ -183,7 +183,7 @@ header{
   width: 11%;
   background-color: cornsilk;
   /* height: 100%; */
-  height: 100vh;
+  height: 120vh;
   
  
   
@@ -223,9 +223,7 @@ h2{
 }
 
 
-/* .aisde_menu:hover .aside_in_menu{
-  border-color: brown;
-} */
+
 
 .aisde_in_menu:hover {
   border-color: brown;
@@ -253,18 +251,9 @@ h2{
   font-size: 20px;
 
 }
-/* table{
-  border:1px solid gray;
-    
-  margin:0 auto;
-  text-align: center;
-  width: 100%;
-  font-size: 20px;
-} */
 
-td{
-    border-top: 1px solid lightgray;
-}
+
+
 .menu_wrap{
     max-width:2000px;
     margin:200px;
@@ -288,52 +277,42 @@ td{
    
   }
 
-
-/* .button{
-  font-size: 40px;
-} */
-/* .community_button{
-  margin: 0px;
-} */
-#total{
-  margin-left: 4px;
-  font-size: 20px;
-  width:25%;
-  margin-right: -4px;
-  /* padding: 0px; */
-}
-#chat{
-  width:25%;
-  font-size: 20px;
-  margin: -4px;
-  /* padding: 0px; */
+.contents_fieldset{
+    margin-top: 40px;
+   
+    border-top: 1px solid lightgray;
  
 }
-#info{
-  width: 25%;
-  margin: -4px;
-  /* padding: 0px; */
-  font-size: 20px;
-}
-#others{
-  width: 25%;
-  margin: -4px;
-  /* padding: 0px; */
-  font-size: 20px;
-}
 
-.search{
-  margin-left:960px;
-  margin-bottom: 10px;
-  margin-top: 10px;
+/* 글쓰는 란 겉 테두리 */
+fieldset{
+    width: 80%;
+   margin-left: 15px;
+   
+  }
   
+  
+
+  /* 첨부파일 */
+  .attch{
+    margin-left: 1000px;
+    margin-top: 10px;
 }
+  /* 등록/수정버튼 */
+  .sub_button{
+     
+      float: right;
+      margin-top: 0.05px;
+      
+  }
+  
+#submit {
+    margin-right:10px;
+}  
 
-h1{
-  text-align: center;
+#fix{
+    margin-right:10px;
 }
-
-
 
 
 
@@ -345,6 +324,9 @@ footer{
   margin-bottom:30px;
   margin-top: 30px;
 }
+
+
+
 address{
   color:gray;
   font-style: normal;
@@ -355,4 +337,8 @@ html,body, section{
     height: 100%;
 
 } 
+
+
+
+
 
