--- a/project_main/css/my_info.css
+++ b/project_main/css/my_info.css
@@ -105,13 +105,12 @@ header{
 }
 
 
-.log li:hover .log_link{
-  font-weight: bold;
-  border-color: red;
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
   
-
 }
-
 
 .menu_item + .menu_item .menu_link {
     margin-left: 14px;
