--- a/project_main/css/notice_content.css
+++ b/project_main/css/notice_content.css
@@ -223,12 +223,16 @@ h2{
 }
 
 
-/* .aisde_menu:hover .aside_in_menu{
-  border-color: brown;
-} */
+.aside_in_menu:hover .aside_button{
+  color:  brown;
+  font-weight: bolder;
+}
 
-.aisde_in_menu:hover {
-  border-color: brown;
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
+  
 }
 
 
