--- a/project_main/css/calendar_write.css
+++ b/project_main/css/calendar_write.css
@@ -99,11 +99,11 @@ header{
 }
 
 
-.log li:hover .log_link{
-  font-weight: bold;
-  border-color: red;
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
   
-
 }
 
 
