--- a/project_main/css/my_community.css
+++ b/project_main/css/my_community.css
@@ -102,11 +102,11 @@ hr{
 }
 
 
-.log li:hover .log_link{
-  font-weight: bold;
-  border-color: red;
+/* 로그인 회원가입 부분 커서 갖다대면 효과 */
+.log_li:hover .log_link{
+  background-color: skyblue;
+  font-weight: bolder;
   
-
 }
 
 
